	* R454: FIXED: Removed HTML lyrics parsing. QTextEdit completely messed up NoteEdit's < and > keywords for syllabic singing. 
	* R455: FIXED: Duplicate env string in lilytest.cpp, so the path won't get truncated
	* R456: ADDED: kpdf as preview program
	* R457: CHANGED: Use KProcess:AllOutput on export instead of All
                FIXED: Use Lilyponds PDF output for preview and print
                FIXED: Use QProcess for preview as KProcess::NotifyOnExit is broken on my system
                FIXED: Parent parameters for QProcess and KProcess in preview and export
	* R458: FIXED: Two slots were wrongly assigned to their signals.
	        ADDED: New shortcut for breve.
    * R459: ADDED: StaffGroup for staffs connected with barlines under bracket in LilyPond export code and ChoirStaff only for non-connected staffs under bracket.
	* R460: FIXED: In LilyPond export stanza number moved to beginning of lyrics
	* R461: FIXED: Crash, when you place a note in non-first voice and the first voice doesn't contain the key signature yet.
	* R462: ADDED:
	  - Correctly export to LilyPond hyphens and melismas. To do this, every word which ends with '-' means that it's connected with another note with an ordinary hyphen (the word is not finished) and every word which ends with '_' means that it's connected with another note with melisma (the word is finished).
	  - Instrument name is now exported for multi-voice staff too.
	* R463: ADDED: Some more LilyPond lyrics improvements.
	* R464: FIXED: Updated example4.not - new hyphens and melismas implemented. Removed stanza numbers - they show up in Lily now out of the box.
	* R465: FIXED: kpdf is now the default preview program.
	* R466: Improved LilyPond export filter:
	  - Support for LilyPond 2.8.x. The exported syntax works out of the box.
	  - New drum note for rectangle note - diamond.
	  - Different drum notes can be present in a single chord now. LilyPond 2.8.x is needed for this, because we use \tweak function.